--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
     <!-- Main -->
     <main>
       <!-- Home -->
-      <section id="home"></section>
+      <section id="home">
+        <img src="images/profile.png" alt="Jaden's profile" />
+        <h2>Hello I&#39;m world-class Coder, Jaden</h2>
+        <p>A web developer currently residing in Seoul, South Korea</p>
+        <a href="#contact">Contact me</a>
+      </section>
 
       <!-- About -->
       <section id="about"></section>
