--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- Google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet" />
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/f57af81b89.js" crossorigin="anonymous"></script>
@@ -60,7 +62,48 @@
       </section>
 
       <!-- About -->
-      <section id="about"></section>
+      <section id="about">
+        <h2>About me</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vitae aut natus ut. Nostrum quae error
+          recusandae beatae expedita, incidunt repellat tempore saepe distinctio quas delectus aperiam ab? Quia,
+          quaerat!
+        </p>
+        <ul>
+          <li>
+            <i class="fa-brands fa-html5"></i>
+            <p>Front-end</p>
+            <p>HTML,CSS,JavaScript,TypeScript, React, Vue, Web APIs</p>
+          </li>
+          <li>
+            <i class="fa-solid fa-mobile"></i>
+            <p>Mobile</p>
+            <p>Android, iOS, React Natives, Flutter, Java, Swift, Kotlin</p>
+          </li>
+          <li>
+            <i class="fa-solid fa-server"></i>
+            <p>Back-end</p>
+            <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
+          </li>
+        </ul>
+
+        <ul>
+          <li>
+            <img src="images/jobs/google.png" alt="google logo" />
+            <div>
+              <p>Google as Senior Software Engineer</p>
+              <p>2019 Oct - Until now</p>
+            </div>
+          </li>
+          <li>
+            <img src="images/jobs/samsung.png" alt="samsung logo" />
+            <div>
+              <p>Samsung as Software Engineer</p>
+              <p>2014 Sept - 2019 Oct</p>
+            </div>
+          </li>
+        </ul>
+      </section>
 
       <!-- Skills -->
       <section id="skills"></section>
