--- a/index.html
+++ b/index.html
@@ -107,7 +107,63 @@
 
       <!-- Skills -->
       <section id="skills"></section>
-
+      <h2>My Skills</h2>
+      <p></p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit assumenda eaque eius amet! Unde facere,
+        ipsum dignissimos sed ea recusandae? Soluta minus natus, corporis explicabo possimus mollitia doloremque fugiat.
+      </p>
+      <div>
+        <section>
+          <h3>Coding Skills</h3>
+          <ul>
+            <li>
+              <div><span>HTML</span><span>98%</span></div>
+              <div><div style="width: 90%"></div></div>
+            </li>
+            <li>
+              <div><span>CSS</span><span>90%</span></div>
+              <div><div style="width: 90%"></div></div>
+            </li>
+            <li>
+              <div><span>JavaScript</span><span>90%</span></div>
+              <div><div style="width: 90%"></div></div>
+            </li>
+            <li>
+              <div><span>TypeScript</span><span>80%</span></div>
+              <div><div style="width: 80%"></div></div>
+            </li>
+            <li>
+              <div><span>React</span><span>75%</span></div>
+              <div><div style="width: 75%"></div></div>
+            </li>
+            <li>
+              <div><span>NodeJs</span><span>68%</span></div>
+              <div><div style="width: 68%"></div></div>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>Tools</h3>
+          <ul>
+            <li>Visual Studio Code</li>
+            <li>IntelliJ</li>
+            <li>Android St udio Code</li>
+            <li>iOS development tools</li>
+            <li>Sketch app</li>
+          </ul>
+        </section>
+        <section>
+          <h3>Etc</h3>
+          <ul>
+            <li>Git</li>
+            <li>Scrum Master</li>
+            <li>4 Languages</li>
+            <li></li>
+            <li></li>
+          </ul>
+        </section>
+      </div>
       <!-- Work  -->
       <section id="work"></section>
 
