--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 
     <!-- SEO -->
     <title>Jaden&#39;s Portfolio</title>
-    <meta name="description" content="Portfolio for world-class web developer Jaden" />
+    <meta
+      name="description"
+      content="Portfolio for world-class web developer Jaden" />
     <meta name="author" content="Jaden" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -24,7 +26,9 @@
       rel="stylesheet" />
 
     <!-- Font awesome -->
-    <script src="https://kit.fontawesome.com/f57af81b89.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f57af81b89.js"
+      crossorigin="anonymous"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -65,9 +69,10 @@
       <section id="about">
         <h2>About me</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vitae aut natus ut. Nostrum quae error
-          recusandae beatae expedita, incidunt repellat tempore saepe distinctio quas delectus aperiam ab? Quia,
-          quaerat!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+          vitae aut natus ut. Nostrum quae error recusandae beatae expedita,
+          incidunt repellat tempore saepe distinctio quas delectus aperiam ab?
+          Quia, quaerat!
         </p>
         <ul>
           <li>
@@ -110,8 +115,10 @@
       <h2>My Skills</h2>
       <p></p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit assumenda eaque eius amet! Unde facere,
-        ipsum dignissimos sed ea recusandae? Soluta minus natus, corporis explicabo possimus mollitia doloremque fugiat.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit
+        assumenda eaque eius amet! Unde facere, ipsum dignissimos sed ea
+        recusandae? Soluta minus natus, corporis explicabo possimus mollitia
+        doloremque fugiat.
       </p>
       <div>
         <section>
@@ -166,9 +173,98 @@
       </div>
       <!-- Work  -->
       <section id="work"></section>
-
+      <h2>My work</h2>
+      <p>Projects</p>
+      <ul>
+        <li>
+          <button>All <span>8</span></button>
+        </li>
+        <li>
+          <button>Front-end <span>3</span></button>
+        </li>
+        <li>
+          <button>Back-end <span>3</span></button>
+        </li>
+        <li>
+          <button>Mobile <span>2</span></button>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project1.webp" alt="project1" />
+            <div>
+              <h3>Project #1</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project2.webp" alt="project2" />
+            <div>
+              <h3>Project #2</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project3.webp" alt="project3" />
+            <div>
+              <h3>Project #3</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project4.webp" alt="project4" />
+            <div>
+              <h3>Project #4</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project5.webp" alt="project5" />
+            <div>
+              <h3>Project #5</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project6.webp" alt="project6" />
+            <div>
+              <h3>Project #6</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project7.webp" alt="project7" />
+            <div>
+              <h3>Project #7</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="images/projects/project8.webp" alt="project8" />
+            <div>
+              <h3>Project #8</h3>
+              <p>Clone Coding with HTML, CSS</p>
+            </div>
+          </a>
+        </li>
+      </ul>
       <!--Testimonial  -->
-      <section id="testimonial"></section>
+      <section id="testimnial"></section>
 
       <!-- Arrow up -->
       <aside></aside>
