--- a/index.html
+++ b/index.html
@@ -265,9 +265,53 @@
       </ul>
       <!--Testimonial  -->
       <section id="testimnial"></section>
+      <h2>Testimonial</h2>
+      <p>See what they say about me</p>
+      <ul>
+        <li>
+          <img src="images/testimonials/people1.webp" alt="people1" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+              aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
+              architecto itaque eligendi iste suscipit explicabo laudantium
+              tempora vitae non veniam aperiam.
+            </p>
+            <p><a href="#">James Kim</a> /Google</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/testimonials/people2.webp" alt="people2" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+              aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
+              architecto itaque eligendi iste suscipit explicabo laudantium
+              tempora vitae non veniam aperiam.
+            </p>
+            <p><a href="#">Anna Jin</a> /Samsung</p>
+          </div>
+        </li>
 
+        <li>
+          <img src="images/testimonials/people3.webp" alt="people3" />
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+              aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
+              architecto itaque eligendi iste suscipit explicabo laudantium
+              tempora vitae non veniam aperiam.
+            </p>
+            <p><a href="#">Anna Jin</a> /Samsung</p>
+          </div>
+        </li>
+      </ul>
       <!-- Arrow up -->
-      <aside></aside>
+      <aside>
+        <a href="#home" title="back to top">
+          <i class="fa-solid fa-arrow-up"></i>
+        </a>
+      </aside>
     </main>
 
     <!-- Footer -->
