--- a/index.html
+++ b/index.html
@@ -315,6 +315,29 @@
     </main>
 
     <!-- Footer -->
-    <footer id="contanct"></footer>
+    <footer id="contanct">
+      <h2>Let&#39;s talk</h2>
+      <p>jysim1000@gamil.com</p>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/moondolph"
+            target="_black"
+            title="my github link">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://github.com/moondolph"
+            target="_black"
+            title="my linkedin link">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+        <li><a href=""></a></li>
+      </ul>
+      <p>©️World-class coder Jaden - All rights reserved</p>
+    </footer>
   </body>
 </html>
