--- a/index.html
+++ b/index.html
@@ -61,10 +61,18 @@
     <main>
       <!-- Home -->
       <section id="home">
-        <img src="images/profile.png" alt="Jaden's profile" />
-        <h2>Hello I&#39;m world-class Coder, Jaden</h2>
-        <p>A web developer currently residing in Seoul, South Korea</p>
-        <a href="#contact">Contact me</a>
+        <img
+          class="home__avatar"
+          src="images/profile.png"
+          alt="Jaden's profile" />
+        <h2 class="home__title">
+          Hello <br />I&#39;m
+          <strong class="home__title--strong">world-class Coder</strong>, Jaden
+        </h2>
+        <p class="home__description">
+          A web developer currently residing in Seoul, South Korea
+        </p>
+        <a class="home__contact" href="#contact">Contact me</a>
       </section>
 
       <!-- About -->
