--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       </section>
 
       <!-- About -->
-      <section id="about">
-        <h2>About me</h2>
-        <p>
+      <section id="about" class="section">
+        <h2 class="title">About me</h2>
+        <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
           vitae aut natus ut. Nostrum quae error recusandae beatae expedita,
           incidunt repellat tempore saepe distinctio quas delectus aperiam ab?
@@ -121,213 +121,215 @@
       </section>
 
       <!-- Skills -->
-      <section id="skills"></section>
-      <h2>My Skills</h2>
-      <p></p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit
-        assumenda eaque eius amet! Unde facere, ipsum dignissimos sed ea
-        recusandae? Soluta minus natus, corporis explicabo possimus mollitia
-        doloremque fugiat.
-      </p>
-      <div>
-        <section>
-          <h3>Coding Skills</h3>
-          <ul>
-            <li>
-              <div><span>HTML</span><span>98%</span></div>
-              <div><div style="width: 90%"></div></div>
-            </li>
-            <li>
-              <div><span>CSS</span><span>90%</span></div>
-              <div><div style="width: 90%"></div></div>
-            </li>
-            <li>
-              <div><span>JavaScript</span><span>90%</span></div>
-              <div><div style="width: 90%"></div></div>
-            </li>
-            <li>
-              <div><span>TypeScript</span><span>80%</span></div>
-              <div><div style="width: 80%"></div></div>
-            </li>
-            <li>
-              <div><span>React</span><span>75%</span></div>
-              <div><div style="width: 75%"></div></div>
-            </li>
-            <li>
-              <div><span>NodeJs</span><span>68%</span></div>
-              <div><div style="width: 68%"></div></div>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h3>Tools</h3>
-          <ul>
-            <li>Visual Studio Code</li>
-            <li>IntelliJ</li>
-            <li>Android St udio Code</li>
-            <li>iOS development tools</li>
-            <li>Sketch app</li>
-          </ul>
-        </section>
-        <section>
-          <h3>Etc</h3>
-          <ul>
-            <li>Git</li>
-            <li>Scrum Master</li>
-            <li>4 Languages</li>
-            <li></li>
-            <li></li>
-          </ul>
-        </section>
-      </div>
+      <section id="skills" class="section">
+        <h2 class="title">My Skills</h2>
+        <p class="description">Skills & Attributes</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit
+          assumenda eaque eius amet! Unde facere, ipsum dignissimos sed ea
+          recusandae? Soluta minus natus, corporis explicabo possimus mollitia
+          doloremque fugiat.
+        </p>
+        <div>
+          <section>
+            <h3>Coding Skills</h3>
+            <ul>
+              <li>
+                <div><span>HTML</span><span>98%</span></div>
+                <div><div style="width: 90%"></div></div>
+              </li>
+              <li>
+                <div><span>CSS</span><span>90%</span></div>
+                <div><div style="width: 90%"></div></div>
+              </li>
+              <li>
+                <div><span>JavaScript</span><span>90%</span></div>
+                <div><div style="width: 90%"></div></div>
+              </li>
+              <li>
+                <div><span>TypeScript</span><span>80%</span></div>
+                <div><div style="width: 80%"></div></div>
+              </li>
+              <li>
+                <div><span>React</span><span>75%</span></div>
+                <div><div style="width: 75%"></div></div>
+              </li>
+              <li>
+                <div><span>NodeJs</span><span>68%</span></div>
+                <div><div style="width: 68%"></div></div>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3>Tools</h3>
+            <ul>
+              <li>Visual Studio Code</li>
+              <li>IntelliJ</li>
+              <li>Android St udio Code</li>
+              <li>iOS development tools</li>
+              <li>Sketch app</li>
+            </ul>
+          </section>
+          <section>
+            <h3>Etc</h3>
+            <ul>
+              <li>Git</li>
+              <li>Scrum Master</li>
+              <li>4 Languages</li>
+              <li></li>
+              <li></li>
+            </ul>
+          </section>
+        </div>
+      </section>
       <!-- Work  -->
-      <section id="work"></section>
-      <h2>My work</h2>
-      <p>Projects</p>
-      <ul>
-        <li>
-          <button>All <span>8</span></button>
-        </li>
-        <li>
-          <button>Front-end <span>3</span></button>
-        </li>
-        <li>
-          <button>Back-end <span>3</span></button>
-        </li>
-        <li>
-          <button>Mobile <span>2</span></button>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project1.webp" alt="project1" />
-            <div>
-              <h3>Project #1</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project2.webp" alt="project2" />
-            <div>
-              <h3>Project #2</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project3.webp" alt="project3" />
-            <div>
-              <h3>Project #3</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project4.webp" alt="project4" />
-            <div>
-              <h3>Project #4</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project5.webp" alt="project5" />
-            <div>
-              <h3>Project #5</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project6.webp" alt="project6" />
-            <div>
-              <h3>Project #6</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project7.webp" alt="project7" />
-            <div>
-              <h3>Project #7</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#" target="_blank">
-            <img src="images/projects/project8.webp" alt="project8" />
-            <div>
-              <h3>Project #8</h3>
-              <p>Clone Coding with HTML, CSS</p>
-            </div>
-          </a>
-        </li>
-      </ul>
+      <section id="work" class="section">
+        <h2 class="title">My work</h2>
+        <p class="description">Projects</p>
+        <ul>
+          <li>
+            <button>All <span>8</span></button>
+          </li>
+          <li>
+            <button>Front-end <span>3</span></button>
+          </li>
+          <li>
+            <button>Back-end <span>3</span></button>
+          </li>
+          <li>
+            <button>Mobile <span>2</span></button>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project1.webp" alt="project1" />
+              <div>
+                <h3>Project #1</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project2.webp" alt="project2" />
+              <div>
+                <h3>Project #2</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project3.webp" alt="project3" />
+              <div>
+                <h3>Project #3</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project4.webp" alt="project4" />
+              <div>
+                <h3>Project #4</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project5.webp" alt="project5" />
+              <div>
+                <h3>Project #5</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project6.webp" alt="project6" />
+              <div>
+                <h3>Project #6</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project7.webp" alt="project7" />
+              <div>
+                <h3>Project #7</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="images/projects/project8.webp" alt="project8" />
+              <div>
+                <h3>Project #8</h3>
+                <p>Clone Coding with HTML, CSS</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </section>
       <!--Testimonial  -->
-      <section id="testimnial"></section>
-      <h2>Testimonial</h2>
-      <p>See what they say about me</p>
-      <ul>
-        <li>
-          <img src="images/testimonials/people1.webp" alt="people1" />
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-              aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
-              architecto itaque eligendi iste suscipit explicabo laudantium
-              tempora vitae non veniam aperiam.
-            </p>
-            <p><a href="#">James Kim</a> /Google</p>
-          </div>
-        </li>
-        <li>
-          <img src="images/testimonials/people2.webp" alt="people2" />
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-              aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
-              architecto itaque eligendi iste suscipit explicabo laudantium
-              tempora vitae non veniam aperiam.
-            </p>
-            <p><a href="#">Anna Jin</a> /Samsung</p>
-          </div>
-        </li>
+      <section id="testimnial" class="section">
+        <h2 class="title">Testimonial</h2>
+        <p class="description">See what they say about me</p>
+        <ul>
+          <li>
+            <img src="images/testimonials/people1.webp" alt="people1" />
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
+                architecto itaque eligendi iste suscipit explicabo laudantium
+                tempora vitae non veniam aperiam.
+              </p>
+              <p><a href="#">James Kim</a> /Google</p>
+            </div>
+          </li>
+          <li>
+            <img src="images/testimonials/people2.webp" alt="people2" />
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
+                architecto itaque eligendi iste suscipit explicabo laudantium
+                tempora vitae non veniam aperiam.
+              </p>
+              <p><a href="#">Anna Jin</a> /Samsung</p>
+            </div>
+          </li>
 
-        <li>
-          <img src="images/testimonials/people3.webp" alt="people3" />
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-              aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
-              architecto itaque eligendi iste suscipit explicabo laudantium
-              tempora vitae non veniam aperiam.
-            </p>
-            <p><a href="#">Anna Jin</a> /Samsung</p>
-          </div>
-        </li>
-      </ul>
-      <!-- Arrow up -->
-      <aside>
-        <a href="#home" title="back to top">
-          <i class="fa-solid fa-arrow-up"></i>
-        </a>
-      </aside>
+          <li>
+            <img src="images/testimonials/people3.webp" alt="people3" />
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
+                aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
+                architecto itaque eligendi iste suscipit explicabo laudantium
+                tempora vitae non veniam aperiam.
+              </p>
+              <p><a href="#">Anna Jin</a> /Samsung</p>
+            </div>
+          </li>
+        </ul>
+        <!-- Arrow up -->
+        <aside>
+          <a href="#home" title="back to top">
+            <i class="fa-solid fa-arrow-up"></i>
+          </a>
+        </aside>
+      </section>
     </main>
-
     <!-- Footer -->
-    <footer id="contanct">
-      <h2>Let&#39;s talk</h2>
-      <p>jysim1000@gamil.com</p>
+    <footer id="contanct" class="section">
+      <h2 class="title">Let&#39;s talk</h2>
+      <p class="description">jysim1000@gamil.com</p>
       <ul>
         <li>
           <a
