--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </section>
 
       <!-- About -->
-      <section id="about" class="section">
+      <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
@@ -84,37 +84,37 @@
           incidunt repellat tempore saepe distinctio quas delectus aperiam ab?
           Quia, quaerat!
         </p>
-        <ul>
-          <li>
-            <i class="fa-brands fa-html5"></i>
-            <p>Front-end</p>
+        <ul class="majors">
+          <li class="major">
+            <i class="fa-brands fa-html5 major__icon"></i>
+            <p class="major__title">Front-end</p>
             <p>HTML,CSS,JavaScript,TypeScript, React, Vue, Web APIs</p>
           </li>
-          <li>
-            <i class="fa-solid fa-mobile"></i>
-            <p>Mobile</p>
+          <li class="major">
+            <i class="fa-solid fa-mobile major__icon"></i>
+            <p class="major__title">Mobile</p>
             <p>Android, iOS, React Natives, Flutter, Java, Swift, Kotlin</p>
           </li>
-          <li>
-            <i class="fa-solid fa-server"></i>
-            <p>Back-end</p>
+          <li class="major">
+            <i class="fa-solid fa-server major__icon"></i>
+            <p class="major__title">Back-end</p>
             <p>Java, JavaScript, Go, NodeJs, Rest APIs, GraphQL</p>
           </li>
         </ul>
 
-        <ul>
-          <li>
+        <ul class="jobs">
+          <li class="job">
             <img src="images/jobs/google.png" alt="google logo" />
             <div>
-              <p>Google as Senior Software Engineer</p>
-              <p>2019 Oct - Until now</p>
+              <p class="job__name">Google as Senior Software Engineer</p>
+              <p class="job__period">2019 Oct - Until now</p>
             </div>
           </li>
-          <li>
+          <li class="job">
             <img src="images/jobs/samsung.png" alt="samsung logo" />
             <div>
-              <p>Samsung as Software Engineer</p>
-              <p>2014 Sept - 2019 Oct</p>
+              <p class="job__name">Samsung as Software Engineer</p>
+              <p class="job__period">2014 Sept - 2019 Oct</p>
             </div>
           </li>
         </ul>
@@ -182,6 +182,7 @@
           </section>
         </div>
       </section>
+
       <!-- Work  -->
       <section id="work" class="section">
         <h2 class="title">My work</h2>
