--- a/index.html
+++ b/index.html
@@ -338,45 +338,60 @@
       </section>
 
       <!--Testimonial  -->
-      <section id="testimnial" class="section">
+      <section id="testimnial" class="section max-container">
         <h2 class="title">Testimonial</h2>
         <p class="description">See what they say about me</p>
-        <ul>
-          <li>
-            <img src="images/testimonials/people1.webp" alt="people1" />
-            <div>
+        <ul class="testimonials">
+          <li class="testimonial">
+            <img
+              class="testimonial__img"
+              src="images/testimonials/people1.webp"
+              alt="people1" />
+            <div class="testimonial__bubble">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
                 aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
                 architecto itaque eligendi iste suscipit explicabo laudantium
                 tempora vitae non veniam aperiam.
               </p>
-              <p><a href="#">James Kim</a> /Google</p>
+              <p class="testimonial__bubble__name">
+                <a href="#">James Kim</a> /Google
+              </p>
             </div>
           </li>
-          <li>
-            <img src="images/testimonials/people2.webp" alt="people2" />
-            <div>
+          <li class="testimonial">
+            <img
+              class="testimonial__img"
+              src="images/testimonials/people2.webp"
+              alt="people2" />
+            <div class="testimonial__bubble">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
                 aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
                 architecto itaque eligendi iste suscipit explicabo laudantium
                 tempora vitae non veniam aperiam.
               </p>
-              <p><a href="#">Anna Jin</a> /Samsung</p>
+              <p class="testimonial__bubble__name">
+                <a href="#">Anna Jin</a> /Sa msung
+              </p>
             </div>
           </li>
 
-          <li>
-            <img src="images/testimonials/people3.webp" alt="people3" />
-            <div>
+          <li class="testimonial">
+            <img
+              class="testimonial__img"
+              src="images/testimonials/people3.webp"
+              alt="people3" />
+            <div class="testimonial__bubble">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
                 aliquam doloribus alias nemo? Earum nulla ab, quas consectetur
                 architecto itaque eligendi iste suscipit explicabo laudantium
                 tempora vitae non veniam aperiam.
               </p>
-              <p><a href="#">Anna Jin</a> /Samsung</p>
+              <p class="testimonial__bubble__name">
+                <a href="#">Anna Jin</a> /Samsung
+              </p>
             </div>
           </li>
         </ul>
