--- a/index.html
+++ b/index.html
@@ -395,38 +395,44 @@
             </div>
           </li>
         </ul>
-        <!-- Arrow up -->
-        <aside>
-          <a href="#home" title="back to top">
-            <i class="fa-solid fa-arrow-up"></i>
-          </a>
-        </aside>
       </section>
+
+      <!-- Arrow up -->
+      <aside>
+        <a class="arrow-up" href="#home" title="back to top">
+          <i class="fa-solid fa-arrow-up"></i>
+        </a>
+      </aside>
     </main>
+
     <!-- Footer -->
-    <footer id="contanct" class="section">
-      <h2 class="title">Let&#39;s talk</h2>
-      <p class="description">jysim1000@gamil.com</p>
-      <ul>
-        <li>
-          <a
-            href="https://github.com/moondolph"
-            target="_black"
-            title="my github link">
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://github.com/moondolph"
-            target="_black"
-            title="my linkedin link">
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-        </li>
-        <li><a href=""></a></li>
-      </ul>
-      <p>©️World-class coder Jaden - All rights reserved</p>
+    <footer id="contact" class="section">
+      <div class="max-container">
+        <h2 class="title">Let&#39;s talk</h2>
+        <p class="description">jysim1000@gamil.com</p>
+        <ul class="contact__links">
+          <li>
+            <a
+              class="contact__link"
+              href="https://github.com/moondolph"
+              target="_black"
+              title="my github link">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              class="contact__link"
+              href="https://github.com/moondolph"
+              target="_black"
+              title="my linkedin link">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+          <li><a href=""></a></li>
+        </ul>
+        <p>©️World-class coder Jaden - All rights reserved</p>
+      </div>
     </footer>
   </body>
 </html>
