--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img class="header__logo__img" src="images/favicon.ico" alt="logo" />
         <h1 class="header__logo__title"><a href="#">Jaden</a></h1>
       </div>
-      <nav>
+      <nav class="header__nav">
         <ul class="header__menu">
           <li><a class="header__menu__item active" href="#home">Home</a></li>
           <li><a class="header__menu__item" href="#about">About</a></li>
@@ -61,18 +61,21 @@
     <main>
       <!-- Home -->
       <section id="home">
-        <img
-          class="home__avatar"
-          src="images/profile.png"
-          alt="Jaden's profile" />
-        <h2 class="home__title">
-          Hello <br />I&#39;m
-          <strong class="home__title--strong">world-class Coder</strong>, Jaden
-        </h2>
-        <p class="home__description">
-          A web developer currently residing in Seoul, South Korea
-        </p>
-        <a class="home__contact" href="#contact">Contact me</a>
+        <div class="home__container">
+          <img
+            class="home__avatar"
+            src="images/profile.png"
+            alt="Jaden's profile" />
+          <h2 class="home__title">
+            Hello <br />I&#39;m
+            <strong class="home__title--strong">world-class Coder</strong>,
+            Jaden
+          </h2>
+          <p class="home__description">
+            A web developer currently residing in Seoul, South Korea
+          </p>
+          <a class="home__contact" href="#contact">Contact me</a>
+        </div>
       </section>
 
       <!-- About -->
