--- a/index.html
+++ b/index.html
@@ -223,28 +223,28 @@
           <p class="description">Projects</p>
           <ul class="categories">
             <li>
-              <button class="category category--selected">
+              <button class="category category--selected" data-category="all">
                 All<span class="category__count">8</span>
               </button>
             </li>
             <li>
-              <button class="category">
-                Front-end<span class="category__count">3</span>
+              <button class="category" data-category="front-end">
+                Front-end<span class="category__count">4</span>
               </button>
             </li>
             <li>
-              <button class="category">
-                Back-end<span class="category__count">3</span>
+              <button class="category" data-category="back-end">
+                Back-end<span class="category__count">2</span>
               </button>
             </li>
             <li>
-              <button class="category">
+              <button class="category" data-category="mobile">
                 Mobile<span class="category__count">2</span>
               </button>
             </li>
           </ul>
           <ul class="projects">
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
@@ -256,7 +256,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
@@ -268,7 +268,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="back-end">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
@@ -280,7 +280,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="mobile">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
@@ -292,7 +292,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
@@ -304,7 +304,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="back-end">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
@@ -316,7 +316,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="mobile">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
@@ -328,7 +328,7 @@
                 </div>
               </a>
             </li>
-            <li class="project">
+            <li class="project" data-type="front-end">
               <a href="#" target="_blank">
                 <img
                   class="project__img"
