--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <!-- Javascript -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
+    <script type="module" src="src/active_menu.js" defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -345,7 +346,7 @@
       </section>
 
       <!--Testimonial  -->
-      <section id="testimnial" class="section max-container">
+      <section id="testimonial" class="section max-container">
         <h2 class="title">Testimonial</h2>
         <p class="description">See what they say about me</p>
         <ul class="testimonials">
@@ -416,7 +417,7 @@
     <footer id="contact" class="section">
       <div class="max-container">
         <h2 class="title">Let&#39;s talk</h2>
-        <p class="description">jysim1000@gamil.com</p>
+        <p class="description">jysim1000@gmail.com</p>
         <ul class="contact__links">
           <li>
             <a
