--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <meta propery="og:title" content="Jaden&#39;s Portfolio" />
     <meta propery="og:type" content="website" />
     <meta propery="og:url" content="generated URL after deployment" />
-    <meta propery="og:image" content="generated image after deployment" />
+    <meta
+      propery="og:image"
+      content="https://moondolph.github.io/portfolio/images/og.webp" />
 
     <!-- Google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
