--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- OG (Open Graph Data) -->
     <meta propery="og:title" content="Jaden&#39;s Portfolio" />
     <meta propery="og:type" content="website" />
-    <meta propery="og:url" content="generated URL after deployment" />
+    <meta propery="og:url" content="https://moondolph.github.io/portfolio/" />
     <meta
       propery="og:image"
       content="https://moondolph.github.io/portfolio/images/og.webp" />
