--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta propery="og:url" content="https://moondolph.github.io/portfolio/" />
     <meta
       propery="og:image"
-      content="https://moondolph.github.io/portfolio/images/og.webp" />
+      content="https://moondolph.github.io/portfolio/images/og2.webp" />
 
     <!-- Google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
