modify kihyun's name and portfolio#3 link

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               </a>
             </li>
             <li class="project" data-type="personal">
-              <a href="#" target="_blank">
+              <a href="https://jaden-to-do-list.netlify.app/" target="_blank">
                 <img class="project__img" src="images/projects/project3.webp" alt="project3" />
                 <div class="project__metadata">
                   <h3 class="project__title">Project #3</h3>
@@ -306,7 +306,7 @@
                   彼は最新の技術トレンドを素早く捉え、新しい挑戦にも柔軟に対応できる。
                   また、問題解決において論理的かつ深い思考を発揮し、的確な判断ができる優れた人材だ。
                 </p>
-                <p><a class="testimonial__bubble__name" href="#">Kihyeon Ham</a> /Researcher, Korea Institute of Procurement</p>
+                <p><a class="testimonial__bubble__name" href="#">Kihyun Ham</a> /Researcher, Korea Institute of Procurement</p>
               </div>
             </li>
           </ul>
