--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
         <div class="max-container">
           <h2 class="title">About me</h2>
           <p class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vitae aut natus ut. Nostrum quae error recusandae beatae expedita, incidunt
-            repellat tempore saepe distinctio quas delectus aperiam ab? Quia, quaerat!
+            I majored in English and Japanese at Hankuk University of Foreign Studies. <br />
+            After graduating, I developed a deep interest in the IT field and programming, which led me to pursue a career as a developer. <br />I am always
+            eager to take initiative and embrace challenges, striving to grow continuously and live a life of progress and innovation.
           </p>
           <ul class="majors">
             <li class="major">
@@ -124,8 +125,8 @@
           <h2 class="title">My Skills</h2>
           <p class="description">Skills & Attributes</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse velit assumenda eaque eius amet! Unde facere, ipsum dignissimos sed ea recusandae?
-            Soluta minus natus, corporis explicabo possimus mollitia doloremque fugiat.
+            My goal is to become a full-stack developer.<br />
+            I enjoy building things quickly while learning along the way.<br />
           </p>
           <div class="skills">
             <section class="skills__coding">
