change type speed and testimonial

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                   Jaden’s teamwork and leadership skills were evident in our University soccer club, where he motivated and guided teammates with a positive
                   attitude. These qualities will undoubtedly make him a great asset in any professional setting
                 </p>
-                <p><a class="testimonial__bubble__name" href="#">Somang Jang</a> /SAMIL PwC</p>
+                <p><a class="testimonial__bubble__name" href="#">Somang Jang</a> /Accountant, SAMIL PwC</p>
               </div>
             </li>
             <li class="testimonial">
@@ -296,7 +296,7 @@
                   Jaden has an exceptional talent for foreign languages, effortlessly communicating in multiple languages. His ability to understand and connect
                   with people from different backgrounds is remarkable.
                 </p>
-                <p><a class="testimonial__bubble__name" href="#">Hoseop Sim</a> /Nexen</p>
+                <p><a class="testimonial__bubble__name" href="#">Hoseob Shim</a> /PM, Nexen Tire</p>
               </div>
             </li>
 
