person1 img change

--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
           <p class="description">See what they say about me</p>
           <ul class="testimonials">
             <li class="testimonial">
-              <img class="testimonial__img" src="images/testimonials/sm.jpg" alt="person1" />
+              <img class="testimonial__img" src="images/testimonials/sm2.png" alt="person1" />
               <div class="testimonial__bubble">
                 <p>
                   Jaden’s teamwork and leadership skills were evident in our University soccer club, where he motivated and guided teammates with a positive
                   attitude. These qualities will undoubtedly make him a great asset in any professional setting
                 </p>
-                <p><a class="testimonial__bubble__name" href="#">Somang Jang</a> /Accountant, SAMIL PwC</p>
+                <p><a class="testimonial__bubble__name" href="#">Somang Jang</a> / SAMIL PwC</p>
               </div>
             </li>
             <li class="testimonial">
